--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -111,7 +111,12 @@
             </tbody>
         </table>
     </div>
-
+@{ 
+    foreach(Usuario usuariosss in ViewBag.Usuario)
+    {
+        @usuariosss.Nombre;
+    }
+}
     <!-------------------- ******************** -------------------->
 
 
