Probando nuevos cambios, mismo resultado

--- a/Futbapp/Views/Usuario/MiPerfil.cshtml
+++ b/Futbapp/Views/Usuario/MiPerfil.cshtml
@@ -24,7 +24,10 @@
         <h2>Equipo: @{
             foreach(Usuario user in ViewBag.Usuario)
             {
-                @user.Nombre;
+                if(user.NombreDeUsuario == "ariel05")
+                {
+                    @user.Equipo;
+                }
             }
 
 
