--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -163,35 +163,36 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">¡Crear Equipo!</h4>
+                        <h4 class="modal-title">¡Armá tu encuentro!</h4>
                     </div>
                 @{
-                    List<Zona> zona = FutbappDB.Zonas.OrderBy(a => a.Id).ToList();
                     List<Sala> sala = FutbappDB.Salas.OrderBy(a => a.Id).ToList();
-                    string zon = "a";
+                    string salon = "a";
 
-                        <div class="modal-body">
-                    @foreach (Zona zonas in zona)
-                    {
-                            <div class="form-group">
-                                <div class="col-sm-12">
-                                    <select name="Provincia" class="form-control provincia">
-                                        <option>Seleccione la Zona</option>
-                                            @if (zonas.NombreDeZona != zon)
-                                            {
-                                                <option>@zonas.NombreDeZona</option>
-                                                zon = zonas.NombreDeZona;
-                                            }
-                                    </select>
-                                </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <select name="NombreDeSala" class="form-control provincia">
+                                    <option>Seleccione el lugar de encuentro</option>
+                                    @foreach (Sala salas in sala)
+                                    {
+                                        if (salas.Nombre != salon)
+                                        {
+                                            Ubicacion ubicacion = FutbappDB.Ubicaciones.FirstOrDefault(u => u.Id == salas.Id);
+                                            Zona Zona = FutbappDB.Zonas.FirstOrDefault(z => z.Id == ubicacion.Id);
+                                            <option>@salas.Nombre-(@Zona.NombreDeZona)</option>
+                                            salon = salas.Nombre;
+                                        }
+                                    }
+                                </select>
                             </div>
-                    }
                         </div>
-                        
+                    </div>
+
                 } 
                 <div class="modal-footer">
                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
-                        <input type="submit" class="btn btn-primary" value="Agregar">
+                        <input type="submit" class="btn btn-primary" value="Aceptar">
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
